Create CRUD classes for FarmerTunnels